--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ '/css/second-min.css' | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ '/css/second.css' | prepend: site.baseurl }}">
 <link href='https://fonts.googleapis.com/css?family=Oswald:400,700|Roboto:400,400italic,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
@@ -6,3 +6,16 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="{{ "/js/home.js" | prepend: site.baseurl }}"></script>
+
+<script type="application/ld+json">
+{
+  "@context" : "http://schema.org",
+  "@type" : "Organization",
+  "url" : "http://www.maximeherbaut.com",
+  "contactPoint" : [{
+    "@type" : "ContactPoint",
+    "telephone" : "+336160713",
+    "contactType" : "customer service"
+  }]
+}
+</script>
