--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,22 +6,27 @@
         <h3 itemprop="name">Maxime Herbaut</h3>
         <div class="social hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1a">
           <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank" rel="nofollow" class="hi-icon"><i class="fa fa-linkedin-square"></i></a>
-            <a href="https://github.com/{{ site.github_username }}" target="_blank" rel="nofollow" class="hi-icon"><i class="fa fa-github-square"></i></a>
-            <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" rel="nofollow" class="hi-icon"><i class="fa fa-twitter-square"></i> </a>
+          <a href="https://github.com/{{ site.github_username }}" target="_blank" rel="nofollow" class="hi-icon"><i class="fa fa-github-square"></i></a>
+          <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" rel="nofollow" class="hi-icon"><i class="fa fa-twitter-square"></i> </a>
         </div>
       </div>
 
-        <div class="col-sm-4">
-        <p class="p-footer"><i class="fa fa-map-marker send-icon"></i> Lille, Nord (59)</p>
+      <div class="col-sm-4">
+        <p class="p-footer"><i class="fa fa-map-marker send-icon"></i>
+          <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+            <span itemprop="addressLocality">Lille</span>,
+            <span itemprop="addressRegion">Nord</span> (59)
+          </span>
+        </p>
         <p class="p-footer"><i class="fa fa-phone send-icon"></i> <span itemprop="telephone"><a href="tel://+33660160713">+33 6 60 16 07 13</a></span></p>
       </div>
       <div class="col-sm-4">
         <p class="p-footer">Ce site a été développé par <strong>Maxime Herbaut</strong>
           codé grâce à <strong>Jekyll</strong> et hébergé fièrement chez <strong>GitHub</strong>.</p>
+        </div>
+      </div>
+      <div class="copyright">
+        Auto entreprise <a href="http://www.maximeherbaut.com/">Maxime Herbaut</a> © 2015
       </div>
     </div>
-    <div class="copyright">
-      Auto entreprise <a href="http://www.maximeherbaut.com/">Maxime Herbaut</a> © 2015
-    </div>
   </div>
-</div>
